# blender-houdini-geo-io

./: .gitignore  README.md  __init__.py  exporter.py  importer.py
hio/: CMakeLists.txt  build.bat
hio/hio/: __init__.py
